--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "pull": "git pull",
-    "commit": "git add . && git commit -m '-' "
+    "commit": "git add . && git commit -m '-' ",
+    "push": "git push"
     
   },
   "dependencies": {
